Prueba error mariadb

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,11 @@ dist.jar=${dist.dir}/InstitucionG1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mariadb-java-client-2.3.0_5.jar=D:\\Barbi\\FACULTAD\\2_SEGUNDO_A\u00d1O\\LABORATORIO _1\\ACCESO _a_DATOS\\mariadb-java-client-2.3.0_5.jar
+file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\emman\\Desktop\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-2.3.0_5.jar}
+    ${file.reference.mariadb-java-client-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
