--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ endorsed.classpath=
 excludes=
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\emman\\Desktop\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=D:\\Users\\Ikaros\\Documents\\NetBeansProjects\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0_5.jar=D:\\Barbi\\FACULTAD\\2_SEGUNDO_A\u00d1O\\LABORATORIO _1\\ACCESO _a_DATOS\\mariadb-java-client-2.3.0_5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-1}
+    ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
+    ${file.reference.mariadb-java-client-2.3.0_5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
