--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.jar=${dist.dir}/InstitucionG1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Barbara\\Desktop\\PROYECTO TRANVERSAL\\ENTREGA FINAL\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\emman\\Desktop\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=D:\\Users\\Ikaros\\Documents\\NetBeansProjects\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0_5.jar=D:\\Barbi\\FACULTAD\\2_SEGUNDO_A\u00d1O\\LABORATORIO _1\\ACCESO _a_DATOS\\mariadb-java-client-2.3.0_5.jar
@@ -41,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
-    ${file.reference.mariadb-java-client-2.3.0_5.jar}
+    ${file.reference.mariadb-java-client-2.3.0_5.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
