--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,7 +72,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=institucion.View.InstitucionMenuView
+main.class=institucion.Modelo.InstitucionTEST
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
