--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Barbara\\Desktop\\PROYECTO TRANVERSAL\\ENTREGA FINAL\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0_5.jar=D:\\Barbi\\FACULTAD\\2_SEGUNDO_A\u00d1O\\LABORATORIO _1\\ACCESO _a_DATOS\\mariadb-java-client-2.3.0_5.jar
+file.reference.mariadb-java-client-2.3.0_5.jar-1=C:\\Users\\Barbara\\Desktop\\Drivers\\mariadb-java-client-2.3.0_5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0_5.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mariadb-java-client-2.3.0_5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
